<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".ThematicLayout" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#FFFFFF" >

            <ImageView
                android:id="@+id/living_reef_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/living_reef"
                android:onClick="onClick"
                android:src="@drawable/conch" />

            <TextView
                android:id="@+id/living_reef_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/living_reef"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#FFFFFF" >

            <TextView
                android:id="@+id/artificial_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/artificial_reef"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/artifical_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/artificial_reef"
                android:onClick="onClick"
                android:src="@drawable/conch" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#FFFFFF" >

            <ImageView
                android:id="@+id/shark_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/shark_tank"
                android:onClick="onClick"
                android:src="@drawable/conch" />

            <TextView
                android:id="@+id/shark_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/shark_tank"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#FFFFFF" >

            <TextView
                android:id="@+id/poison_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/poison_tank"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/poison_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/poison_tank"
                android:onClick="onClick"
                android:src="@drawable/conch" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#FFFFFF" >

            <ImageView
                android:id="@+id/lobster_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/lobster_tank"
                android:onClick="onClick"
                android:src="@drawable/conch" />

            <TextView
                android:id="@+id/lobster_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/lobster_tank"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#FFFFFF" >

            <TextView
                android:id="@+id/school_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/school_tank"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/school_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/school_tank"
                android:onClick="onClick"
                android:src="@drawable/conch" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#FFFFFF" >

            <ImageView
                android:id="@+id/cave_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cave_tank"
                android:onClick="onClick"
                android:src="@drawable/conch" />

            <TextView
                android:id="@+id/cave_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/cave_tank"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>